tests/reference/asr-structs_01-0893e35.stderr
semantic error: Alignment 5 is not a positive power of 2.
 --> tests/errors/structs_01.py:3:17
  |
3 | @packed(aligned=5)
  |                 ^ 
